attached_assets/Pasted-nekomi-192-168-1-110-NameMaster-npm-run-dev-rest-express-1-0-0-dev-tsx-server-index-ts-node-1739875798452.txt
nekomi@192-168-1-110 NameMaster % npm run dev

> rest-express@1.0.0 dev
> tsx server/index.ts

(node:8016) ExperimentalWarning: `--experimental-loader` may be removed in the future; instead use `register()`:
--import 'data:text/javascript,import { register } from "node:module"; import { pathToFileURL } from "node:url"; register("file%3A///Users/nekomi/Downloads/NameMaster/node_modules/tsx/dist/loader.js", pathToFileURL("./"));'
(Use `node --trace-warnings ...` to show where the warning was created)
(node:8016) UnsupportedWarning: `globalPreload` has been removed; use `initialize` instead.
(Use `node --trace-warnings ...` to show where the warning was created)
file:///Users/nekomi/Downloads/NameMaster/vite.config.ts:1
import{defineConfig}from"vite";import react from"@vitejs/plugin-react";import themePlugin from"@replit/vite-plugin-shadcn-theme-json";import path,{dirname}from"path";import runtimeErrorOverlay from"@replit/vite-plugin-runtime-error-modal";import{fileURLToPath}from"url";const __filename=fileURLToPath(import.meta.url);const __dirname=dirname(__filename);var vite_config_default=defineConfig({plugins:[react(),runtimeErrorOverlay(),themePlugin(),...process.env.NODE_ENV!=="production"&&process.env.REPL_ID!==void 0?[await import("@replit/vite-plugin-cartographer").then((mod)=>{const exports = Object.keys(mod);if(exports.length===1&&exports[0]==='default'&&mod.default&&mod.default.__esModule){return mod.default}return mod}).then(m=>m.cartographer())]:[]],resolve:{alias:{"@":path.resolve(__dirname,"client","src"),"@shared":path.resolve(__dirname,"shared")}},root:path.resolve(__dirname,"client"),build:{outDir:path.resolve(__dirname,"dist/public"),emptyOutDir:true}});export{vite_config_default as default};
       ^^^^^^^^^^^^
SyntaxError: The requested module 'vite' does not provide an export named 'defineConfig'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:181:21)
    at ModuleJob.run (node:internal/modules/esm/module_job:264:5)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:583:26)
    at asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:98:5)